--- a/style.css
+++ b/style.css
@@ -303,6 +303,17 @@ body {
   padding: 0;
 }
 /*first page*/
+    header::before {
+  background: url("landingpage.jpg") no-repeat center center/cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+}
 .main {
   display: flex;
   flex-direction: column;
